# FlipperTheDolphin

./: .gitignore  Flipper.ipynb  LICENSE  README.md  requirements.txt
PSO/: Cargo.toml  Makefile  setup.py
PSO/pso/: __init__.py
PSO/src/: lib.rs  particle.rs  pso.rs
notebooks/: pso.ipynb
src/: __old_main.py  jump.py  main.py  pso.py
