[package]
name = "PSO"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

[lib]
name = "pso"
crate-type = ["cdylib"]

[dependencies]

numpy = "0.12.*"

ndarray = { version = "0.13.1", features = ["rayon"] }
ndarray-rand = "0.11.0"
image = "0.23.11"
rayon = "1.5.0"
itertools = "0.9.0"
indicatif = "0.14.0"
rand = "0.7.3"

[dependencies.pyo3]
version = "0.12.*"
features = ["extension-module"]
