[package]
name = "PSO"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

[lib]
name = "pso"
crate-type = ["cdylib"]

[dependencies]

numpy = "0.12.*"

ndarray = { version = "0.13.1", features = ["rayon"] }
ndarray-rand = "0.11.0"
rayon = "1.5.0"

[dependencies.pyo3]
version = "0.12.*"
features = ["extension-module"]
